--- a/index.html
+++ b/index.html
@@ -31,16 +31,22 @@
       box-shadow: 0 8px 20px rgba(0,0,0,0.3);
     }
     .nav-button {
-      margin-left: 0.5rem;
+      margin: 0.5rem 0;
       padding: 0.5rem 1rem;
       background-color: #2563eb;
       color: white;
       border-radius: 0.375rem;
       transition: background-color 0.3s ease, transform 0.3s ease;
+      text-align: left;
+      width: 100%;
     }
     .nav-button:hover {
       background-color: #1d4ed8;
       transform: scale(1.03);
+    }
+    .nav-button:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
     }
   </style>
 </head>
@@ -52,16 +58,14 @@
     </div>
     <nav>
       <ul>
-        <li class="mb-4">
-          <a href="index.html" class="block py-2 px-4 rounded hover:bg-gray-700 text-white">Dashboard</a>
+        <li>
+          <a href="index.html" class="nav-button">Dashboard</a>
         </li>
-        <li class="mb-4">
-          <a href="create.html" class="block py-2 px-4 rounded hover:bg-gray-700 text-white">Skapa Butik</a>
+        <li>
+          <a href="create.html" class="nav-button">Skapa Butik</a>
         </li>
-        <li class="mb-4">
-          <button id="paymentsNav" class="w-full text-left py-2 px-4 rounded hover:bg-gray-700 text-white">
-            Betalningar
-          </button>
+        <li>
+          <button id="paymentsNav" class="nav-button">Betalningar</button>
         </li>
       </ul>
     </nav>
@@ -95,7 +99,7 @@
     let currentUser = null;
     let loginPopup = null;
 
-    // Returns the allowed number of stores based on the user's plan.
+    // Returns allowed number of stores based on plan.
     function getStoreLimit(plan) {
       switch (plan) {
         case "Start": return 1;
@@ -107,7 +111,7 @@
       }
     }
 
-    // Update top-right user info.
+    // Update the top-right user info.
     function updateUserInfo() {
       document.getElementById("userInfo").innerHTML = `
         Inloggad som: <strong>${currentUser.email}</strong>
@@ -115,18 +119,16 @@
           Logga ut
         </button>
       `;
-      // Update the payments button.
-      const paymentsNav = document.getElementById("paymentsNav");
+      // Update payments button.
+      const paymentsBtn = document.getElementById("paymentsNav");
       if (currentUser.stripeAccountId) {
-        paymentsNav.textContent = "Betalningar";
-        paymentsNav.disabled = false;
-        paymentsNav.style.opacity = "1";
-        paymentsNav.onclick = openExpressDashboard;
+        paymentsBtn.textContent = "Betalningar";
+        paymentsBtn.disabled = false;
+        paymentsBtn.onclick = openExpressDashboard;
       } else {
-        paymentsNav.textContent = "Betalningar (Ej tillgängligt)";
-        paymentsNav.disabled = true;
-        paymentsNav.style.opacity = "0.5";
-        paymentsNav.onclick = null;
+        paymentsBtn.textContent = "Betalningar (Ej tillgängligt)";
+        paymentsBtn.disabled = true;
+        paymentsBtn.onclick = null;
       }
     }
 
@@ -155,13 +157,13 @@
     function showActivePlanModal() { document.getElementById("activePlanModal").classList.remove("hidden"); }
     function hideActivePlanModal() { document.getElementById("activePlanModal").classList.add("hidden"); }
 
-    // Open login popup.
+    // Open the login popup using your /auth page.
     function openLoginPopup() {
       loginPopup = window.open("https://webstay.se/auth", "Login", "width=500,height=600");
       if (!loginPopup) showAlert("Popup-blocker hindrade inloggning. Vänligen tillåt popup-fönster.", "error");
     }
 
-    // Listen for messages from the login popup.
+    // Listen for messages from login popup.
     window.addEventListener("message", function(event) {
       if (event.origin !== "https://webstay.se") return;
       const data = event.data;
@@ -202,6 +204,7 @@
           setTimeout(() => { logout(); window.location.href = "https://order.webstay.se"; }, 1000);
         } else {
           currentUser.plan = activePlanRecords[0].PlanName || "Start";
+          // For the dashboard, we display stores from all records with non-empty StoreID.
           const storesCreated = activePlanRecords.filter(record => record.StoreID && record.StoreID.trim() !== "");
           displayStores(storesCreated);
         }
@@ -211,7 +214,7 @@
       }
     }
 
-    // Display stores; if StoreID contains commas, split and display each as separate cards.
+    // Display stores; if StoreID contains commas, split and display each as a separate card.
     function displayStores(stores) {
       const storeList = document.getElementById("storeList");
       storeList.innerHTML = "";
@@ -238,7 +241,9 @@
       }
     }
 
-    // Open Express Dashboard: call backend to get a login link and open it in a popup.
+    // Open Express Dashboard:
+    // This calls the backend endpoint to create a login link for the connected Stripe account,
+    // then opens that link in a popup window.
     async function openExpressDashboard() {
       if (!currentUser.stripeAccountId) {
         showAlert("Inget Stripe-konto kopplat till ditt konto.", "error");
